Add option for Claude Opus 4.5 in index.html

--- a/index.html
+++ b/index.html
@@ -959,6 +959,7 @@
                         <option value="qwen3.5-397b-a17b">Qwen3.5 397B</option>
                         <option value="qwen3-max-2026-01-23">Qwen3 Max</option>
                         <option value="glm-5">GLM-5</option>
+                        <option value="claude-opus-4.5">Opus 4.5</option>
                     </optgroup>
                     <optgroup label="🟢 Standard">
                         <option value="kimi">Kimi</option>
@@ -1083,6 +1084,7 @@
             "glm-4.7": { name: "GLM-4.7", tier: "standard", provider: "Zhipu" },
             "qwen3-vl-plus": { name: "Qwen3 VL Plus", tier: "standard", provider: "Qwen" },
             "qwen-plus-2025-07-28": { name: "Qwen Plus", tier: "standard", provider: "Qwen" }
+            "claude-opus-4.5": { name: "Opus 4.5", tier: "premium", provider: "Anthropic" }
         };
 
         // ===== Toast =====
