Fix formatting issue in index.html

--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@
             "kimi": { name: "Kimi", tier: "standard", provider: "Moonshot" },
             "glm-4.7": { name: "GLM-4.7", tier: "standard", provider: "Zhipu" },
             "qwen3-vl-plus": { name: "Qwen3 VL Plus", tier: "standard", provider: "Qwen" },
-            "qwen-plus-2025-07-28": { name: "Qwen Plus", tier: "standard", provider: "Qwen" }
+            "qwen-plus-2025-07-28": { name: "Qwen Plus", tier: "standard", provider: "Qwen" },
             "claude-opus-4.5": { name: "Opus 4.5", tier: "premium", provider: "Anthropic" }
         };
 
